terraform/elastic.tf
resource "aws_eip" "lb" {
  instance = aws_instance.aws_ubuntu.id
  domain   = "vpc"
}
